--- a/chandana/css/style.css
+++ b/chandana/css/style.css
@@ -58,8 +58,88 @@ body{
     background: rgb(2, 172, 30);
     clip-path: polygon(100% 0, 93% 50%, 100% 99%, 0% 100%, 7% 50%, 0% 0%);
     
-
 }
 
+.card1{
+    /* border: 2px solid green; */
+    margin: auto 8rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: roboto;
+}
+
+.product-card{
+    /* border: 2px solid red; */
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1.4rem;
+    
+    
+}
+
+.product-card img{
+    width: 70%;
+    position: relative;
+}
+
+.product-card img:hover{
+    display: block;
+    position: absolute;
+    width:18%;
+  }
+  
+
+.product-card button{
+    padding: 0.3rem 1.6rem;
+    background: green;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 2px 20px 5px rgba(64, 67, 65, 0.477);
+    color: white;
+    font-size: bold;
+
+}
+.populer-section{
+    /* border: 2px solid red; */
+}
+
+.populer-section .more{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.populer-section .more a{
+    color: #002B5B;
+    font-weight: bold;
+    font-family: roboto;
+    text-decoration: none;
+    outline: 3px solid #002B5B;
+    border-radius: 3px;
+    padding: 0.3rem 2.5rem;
+    margin:0px auto 1rem auto;
+}
+
+.populer-section .more a:hover{
+    color: white;
+  background: red;
+  outline: 3px solid #010624;
+}
+
+.sale{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem auto;
+    
+}
+.sale img{
+    width: 70vw;
+    /* border: 2px solid red; */
+    border-radius: 10px;
+}
 
 
