--- a/chandana/css/style.css
+++ b/chandana/css/style.css
@@ -276,3 +276,36 @@ footer {
     color: #666;
   }
   
+
+  .hero{
+    /* border: 2px solid red; */
+    padding: 20px 18rem;
+    /* margin: 2rem; */
+    font-family: sans-serif;
+    font-size: 1.1rem;
+    color: white;
+    background-image: url("../templates/images/black-background.jpg");
+    /* background-position: center; */
+    background-size: cover;
+  }
+  .hero div{
+    /* border: 2px solid blue; */
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero div img{
+    width: 40%;
+    border-radius: 100%;
+  }
+
+  .map{
+    display: flex;
+    justify-content: center;
+    margin: 20px auto;
+  }
+  .map iframe{
+    /* border: 2px solid red; */
+    width: 90vw;
+    height: 70vh;
+  }
