--- a/mohit/template/css/style.css
+++ b/mohit/template/css/style.css
@@ -2,70 +2,73 @@
     margin: 0;
     padding: 0;
 }
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* border: 2px solid red; */
-    padding: 0px 8rem;
+
+.headder{
     background-color: #F5F3C1;
-    
+}
+.navbar{
+    /* margin: auto 1rem; */
 }
 
-.logo, .nav-items{
-    /* border: 2px solid red; */
-    margin: 1rem;
-}
-.logo h1{
-    font-family: 'roboto';
-    text-transform: uppercase;
-    font-weight: 900;
-    font-size: 2rem;  
-}
-
-.nav-items ul{
-    display: flex;
-    gap: 3rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    
-}
-
-.nav-items a, li{
+.nav-0{
     text-decoration: none;
-    list-style-type: none;
-    color: #000;
+    font-family: 'roboto';
+    font-weight: bold;
+    color: darkred;
+    text-transform: uppercase;
 }
 
-
-.hero-section{
-    border: 2px solid red;
+.nav-link{
+    font-family: 'roboto';
+    
 }
 
-.hero-section{
+.container{
+    margin: 1rem auto;
+    border: 1px solid gray;
+    border-radius: 10px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border: 2px solid gray;
-    padding: 2rem;
-    margin: 2rem 3rem;
-    border-radius: 15px;
+    align-items: center;
+    justify-content: space-around;
+}
+.container-img, .text{
+    width: 40vw;
+    /* border: 2px solid red; */
 }
 
-.hero-section .hero-description{
-    width: 45%;
-    border: 2px solid red;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem;
+@media (max-width: 992px){
+    .container{
+        flex-direction: column;
+
+    }
+    .container-img, .text{
+        width: 100%;
+    }
+
 }
-.hero-section .hero-picture{
-    border: 2px solid red;
-    width: 45%;
-    display: flex;
-    justify-content: center;
+
+
+.text h1{
+    font-family: 'roboto';
+    padding: 1.4rem 0px;
+    font-size: 1.4rem;
 }
-.hero-section .hero-picture img{
-    width: 70%;
+.text p{
+    color: gray;
+    font-style: italic;
+    text-align: justify;
+}
+.text i{
+    font-size: 2.5rem;
+    margin: 0px 0.5rem;
+}
+
+.text i:hover{
+    color: orange;
+    cursor: pointer;
+}
+
+.container-img img{
+    width: 100%;
+    border-radius: 10px;
 }
