--- a/mohit/template/css/style.css
+++ b/mohit/template/css/style.css
@@ -25,11 +25,18 @@
 
 .container{
     margin: 1rem auto;
-    border: 1px solid gray;
+    /* border: 1px solid gray; */
     border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-image: url('../images/background3.jpg');
+    backdrop-filter: blur(5px);
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0px 2px 15px 5px rgba(64, 67, 65, 0.477);
+    
+    
 }
 .container-img, .text{
     width: 40vw;
@@ -54,21 +61,130 @@
     font-size: 1.4rem;
 }
 .text p{
-    color: gray;
+    color: black;
+    font-weight: 400;
     font-style: italic;
     text-align: justify;
+    text-shadow: 2px 2px 10px #000000;
 }
 .text i{
+    color: rgb(23, 22, 22);
     font-size: 2.5rem;
     margin: 0px 0.5rem;
 }
 
 .text i:hover{
-    color: orange;
+    color: red;
     cursor: pointer;
 }
 
 .container-img img{
     width: 100%;
     border-radius: 10px;
+}
+
+
+.skill-and-project-heading{
+    text-align: center;
+    font-family: roboto;
+    margin: 4rem 0px 1.5rem 0px;
+}
+
+.porgress-box{
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0.5rem;
+}
+
+.skill, .work-and-projrcts{
+    border: 1px solid gray;
+    width: 48%;
+    border-radius: 10px;
+    margin: 10px;
+}
+.skill{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.skill h2{
+    font-weight: 400;
+    font-size: 18px;
+    font-family: roboto;
+
+}
+
+.skill .progress-bar{
+    background: rgba(204, 203, 203, 0.815);
+    width: 80%;
+    height: 10px;
+    border-radius: 5px;
+    margin-bottom: 1.2rem;    
+}
+
+.progress-bar div{
+    height: 10px;
+    border-radius: 5px;
+    width: 0%;
+}
+
+@keyframes html{
+    100%{
+        width: 92%;
+    }
+}
+
+@keyframes css{
+    100%{
+        width: 70%;
+    }
+}
+
+@keyframes js{
+    100%{
+        width: 30%;
+    }
+}
+
+@keyframes python{
+    100%{
+        width: 80%;
+    }
+}
+
+@keyframes django{
+    100%{
+        width: 60%;
+    }
+}
+
+.progress-bar .html{
+    background: #3C79F5;
+    animation: html 1s ease-out forwards;
+
+}
+.progress-bar .css{
+    background: #FBC252;
+    animation: css 1s ease-out forwards;
+
+}
+.progress-bar .java-script{
+    background: #FF731D;
+    animation: js 1s ease-out forwards;
+    
+}
+.progress-bar .python{
+    background: #002E94;
+    animation: python 1s linear forwards;
+
+}
+.progress-bar .django{
+    background: #781C68;
+    animation: django 1s linear forwards;
+
 }
