--- a/mohit/template/css/style.css
+++ b/mohit/template/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-size: 62.5%;
 }
 
 .headder{
@@ -8,6 +9,7 @@
 }
 .navbar{
     /* margin: auto 1rem; */
+    
 }
 
 .nav-0{
@@ -16,22 +18,25 @@
     font-weight: bold;
     color: darkred;
     text-transform: uppercase;
+    font-size: 2.8rem;
+    
 }
 
 .nav-link{
     font-family: 'roboto';
+    font-size: 1.6rem;
     
 }
 
 .container{
-    margin: 1rem auto;
+    margin: 1.6rem auto;
     /* border: 1px solid gray; */
     border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     background-image: url('../images/background3.jpg');
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     background-size: cover;
     background-position: center;
     box-shadow: 0px 2px 15px 5px rgba(64, 67, 65, 0.477);
@@ -58,7 +63,7 @@
 .text h1{
     font-family: 'roboto';
     padding: 1.4rem 0px;
-    font-size: 1.4rem;
+    font-size: 3.2rem;
 }
 .text p{
     color: black;
@@ -66,10 +71,11 @@
     font-style: italic;
     text-align: justify;
     text-shadow: 2px 2px 10px #000000;
+    font-size: 1.6rem;
 }
 .text i{
     color: rgb(23, 22, 22);
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     margin: 0px 0.5rem;
 }
 
@@ -88,6 +94,7 @@
     text-align: center;
     font-family: roboto;
     margin: 4rem 0px 1.5rem 0px;
+    font-size: 3.4rem;
 }
 
 .porgress-box{
@@ -96,7 +103,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 0.5rem;
+    padding: 1rem;
 }
 
 .skill, .work-and-projrcts{
@@ -107,7 +114,7 @@
 }
 
 .work-and-projrcts{
-    padding: 1rem;
+    padding: 1.6rem;
     display: flex;
     justify-content: center;
     min-height: 310px;
@@ -117,7 +124,7 @@
 
 }
 .skill{
-    padding: 1rem;
+    padding: 1.8rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -131,7 +138,7 @@
 
 .skill h2{
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-family: roboto;
     color: white;
 
@@ -142,7 +149,7 @@
     width: 80%;
     height: 10px;
     border-radius: 5px;
-    margin-bottom: 1.2rem;    
+    margin-bottom: 2rem;    
 }
 
 .progress-bar div{
@@ -223,6 +230,7 @@
     width: 30px;
     height: 0%;
     transition: width 1s;
+    font-size: 2rem;
     
 }
 .work-box div:hover{
@@ -238,6 +246,7 @@
     bottom: 19.6px;
     font-family: roboto;
     color: white;
+    font-size: 1.6rem;
     
 }
 
@@ -298,6 +307,7 @@
     display: inline-block;
     width: 10px;
     height: 12px;
+  
     
 }
 .color-code .html-bar-color-code span{
@@ -371,11 +381,11 @@
 }
 
 .portfolio{
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .blogs{
-    /* border: 2px solid red; */
+    /* border: 2px solid black; */
     margin: 0px 8rem; 
     padding: 1rem 2rem;
     display: flex; 
@@ -406,32 +416,35 @@
     
 }
 
-/* .blogs .card .blog-img img{
-    width: 100%;
-   
-} */
+.blogs .card .text-field h3{
+    font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif; 
+    font-size: 1.4rem;
+    font-weight: bold;
+    /* border: 2px solid red; */
+    height: 50%;
+    overflow: hidden;
+}
+
 .blogs .card .text-field{
     /* border: 2px solid yellow; */
     height: 40%;
     padding: 1.6rem 1rem;
     font-family: 'roboto';
-}
-.blogs .card .text-field h3{
-    font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif; 
-    font-size: 1rem;
+    
 }
 
 .blogs .card .text-field button{
+    font-size: 1.4rem;
     border: none;
     background: white;
     outline: 1px solid #002B5B;
     color: #002B5B;
     border-radius: 4px;
     margin: 0px 1rem 0px 0px;
-    padding: 0.3rem 1rem;
+    padding: 0.6rem 1.8rem;
     font-weight: bold;
     position: relative;
-    bottom: -10px;
+    bottom: -1rem;
     
 }
 
@@ -443,5 +456,75 @@
 
 
 
+@media (max-width: 1200px){
 
+    html{
+        font-size: 55%;
+    }
+    
+    .portfolio{
+        /* background-color: rgb(255, 58, 58); */
+    }
+    .blogs{
+        /* border: 2px solid green; */
+        gap: 3rem;
+    }
+
+    .blogs .card{
+        border: 1.4px solid gray;
+        width: 35vw;
+    }
+}
+
+@media (max-width: 680px){
+
+    .blogs .card{
+        border: 1.4px solid gray;
+        width: 40vw;
+        height: 45vh;
+    }
+    .blogs{  
+        margin: 0px 2rem;
+    }
+    
+}
+
+@media (max-width: 580px){
+    html{
+        font-size: 42%;
+    }
+
+    .blogs{  
+        margin: 0px;
+    }
+    .blogs .card{
+        border: 1.4px solid gray;
+        width: 40vw;
+        height: 25vh;
+    }
+    .blogs .card .text-field{
+
+        height: 40%;
+        padding: 0.2rem;
+        font-family: 'roboto';
+    }
+
+    .blogs .card .text-field .checkout-btn{
+        display: none;
+        
+    }
+    .blogs .card .text-field button{
+        font-size: 1.4rem;
+       
+        margin: 0.1rem 0.5rem;
+        padding: 0.6rem 1.8rem;
+        font-weight: bold;
+        position: relative;
+        bottom: 0rem;
+        
+    }
+    
+  
+    
+}
   
