--- a/mohit/template/css/portfoliostyle.css
+++ b/mohit/template/css/portfoliostyle.css
@@ -155,3 +155,64 @@
 .seller-img img{
     width: 100%;
 }
+
+.table td, .table th{
+    font-size: 1.6rem;
+
+}
+.table td i{
+    font-size: 1.9rem;
+}
+
+.table button{
+    font-weight: 600;
+    padding: 0.3rem 1.8rem;
+    border: none;
+    border-radius: 2px;
+    background: rgb(2, 146, 47);
+    color: white;
+}
+
+.recomendations .card-wraper{
+    display: flex;
+    /* flex-wrap: */
+    gap: 10px;
+    overflow-x: scroll;
+}
+
+.card{
+    min-width: 25rem;
+}
+
+.right-box{
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5rem;
+}
+
+.right-buttons, .right-box-desc{
+    border: 2px solid blue;
+    width: 100%;
+}
+
+.right-box-desc .price{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 2rem;
+}
+.right-box .right-buttons button{
+    font-size: 1.6rem;
+    font-weight: bolder;
+    font-family: sans-serif;
+    padding: 1.8rem 4rem;
+}
+.right-box .right-box-desc ul{
+    border: 2px solid red;
+}
+
+.right-box .right-box-desc li{
+    font-size: 1.6rem;
+}
