--- a/mohit/template/css/portfoliostyle.css
+++ b/mohit/template/css/portfoliostyle.css
@@ -1,6 +1,12 @@
 *{
     /* font-size: 100%; */
 }
+/* .description-bar{
+    width: 100vw;
+    position: fixed;
+    
+    top: 0px;
+} */
 
 .description-bar{
     /* border: 2px solid pink; */
@@ -11,6 +17,7 @@
     font-weight: 200;
     color: gray;
     border-bottom: 1px solid gray;
+    background: whitesmoke;
     
 }
 
@@ -27,24 +34,25 @@
     cursor: pointer;
 }
 .description-bar ul li:hover{
-    border-bottom: 2px solid green;
+    /* border-bottom: 2px solid green; */
     color: rgb(57, 57, 57);
 }
 
 
 .main-box{
-    border: 2px solid red;
-    margin: 4rem 15em;
+    /* border: 2px solid red; */
+    margin: 6rem 15em;
     display: flex;
 }
 
 .left-half{
-    width: 50vw;
-    border: 2px solid green;
+    width: 50%;
+    /* border: 2px solid green; */
 }
 .right-half{
-    width: 50vw;
-    border: 2px solid green;
+    width: 50%;
+    /* border: 2px solid green; */
+    
 }
 
 .main-box h2{
@@ -53,16 +61,16 @@
     font-weight: bolder;
     font-family: Helvetica, sans-serif;
     font-size: 3.4rem;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .main-box .seller{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     font-size: 2.4rem;
     align-items: center;
     gap: 10px;
-    padding: 1rem 5rem;
+    padding: 2rem 9rem;
 }
 .main-box .seller h3{
     font-weight: bold;
@@ -82,7 +90,7 @@
 
 .product-img{
     width: 30vw;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 0px auto;
 }
 
@@ -114,7 +122,7 @@
 }
 
 .about-seller{
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .about-seller p{
@@ -150,7 +158,7 @@
 
 .seller-img{
     width: 40%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 .seller-img img{
     width: 100%;
@@ -185,15 +193,24 @@
 }
 
 .right-box{
-    border: 2px solid red;
+    border: 1px solid gray;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 5rem;
+    align-items: center;    
+    position: fixed;
+  top: 12;
+  left: 1;
+  right: 1;
+  margin-right:140px;
+  margin-left: 60px;
+  padding: 2rem;
+   
+    
 }
 
 .right-buttons, .right-box-desc{
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     width: 100%;
 }
 
@@ -203,16 +220,69 @@
     align-items: center;
     padding: 0px 2rem;
 }
+.price h2{
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.right-buttons{
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-around;
+}
 .right-box .right-buttons button{
     font-size: 1.6rem;
     font-weight: bolder;
     font-family: sans-serif;
     padding: 1.8rem 4rem;
+    margin-bottom: 4rem;
+    border: none;
+    outline: 1px solid green;
+    border-radius: 5px;
 }
+
+.right-box-desc{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.package-desc p{
+    font-size: 1.6rem;
+    padding: 2rem 4rem;
+    font-weight: bold;
+    color: gray;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .right-box .right-box-desc ul{
-    border: 2px solid red;
+    /* border: 2px solid red; */
+    padding: 2rem 6rem;
 }
 
 .right-box .right-box-desc li{
     font-size: 1.6rem;
 }
+
+.right-box-desc button{
+    font-size: 2rem;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    padding: 0.5rem;
+    width: 100%;
+    background: green;
+    border-radius: 4px;
+    color: white;
+    /* text-transform: uppercase; */
+    letter-spacing: 1.4px;
+
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+    
+  }
+  
