--- a/mohit/template/css/portfoliostyle.css
+++ b/mohit/template/css/portfoliostyle.css
@@ -12,13 +12,17 @@
     /* border: 2px solid pink; */
     display: flex;
     justify-content: space-between;
-    font-size: 4.5rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 200;
-    color: gray;
+    
     border-bottom: 1px solid gray;
     background: whitesmoke;
     
+}
+.description-bar a{
+    font-size: 1.6rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    color: gray;
+    text-decoration: none;
 }
 
 .overview, .share{
@@ -30,11 +34,9 @@
     
 }
 
-.description-bar ul li{
-    cursor: pointer;
-}
+
 .description-bar ul li:hover{
-    /* border-bottom: 2px solid green; */
+    border-bottom: 2px solid green;
     color: rgb(57, 57, 57);
 }
 
@@ -143,6 +145,7 @@
     /* border: 2px solid red; */
     width: 60%;
 }
+
 .desc button{
     font-size: 1.6rem;
     font-weight: bold;
@@ -162,6 +165,7 @@
 }
 .seller-img img{
     width: 100%;
+    border-radius: 4px 0px 0px 4px;
 }
 
 .table td, .table th{
