--- a/mohit/template/css/portfoliostyle.css
+++ b/mohit/template/css/portfoliostyle.css
@@ -294,3 +294,43 @@
 .active {
     display: block;
   }
+
+
+@media (max-width: 1080px) {
+    .right-half{
+        display: none;
+        
+    }
+    .left-half{
+        width: 100%;
+    }
+    .product-img{
+        width: 50vw;
+        /* border: 2px solid red; */
+    
+    }
+}
+
+@media (max-width: 500px) {
+    .main-box{
+        /* border: 2px solid red; */
+        margin: 6rem 5em;
+    }
+    .main-box h2{
+        font-size: 2.4rem;
+    }
+    
+    .product-img{
+        width: 70vw;
+        /* border: 2px solid red; */
+    
+    }
+    .share{
+        display: flex;
+        flex-direction: column;
+    }
+    .overview, .share{
+        margin: 1rem 1rem;
+    }
+        
+}
