--- a/mohit/template/css/blog.css
+++ b/mohit/template/css/blog.css
@@ -50,3 +50,63 @@ p, li{
 .blog-img img{
     width: 100%;
 }
+
+.search-bar-outline{
+    border-bottom: 1px solid gray;
+    text-align: center;
+    margin: 3rem auto;
+    padding: 1rem 0px;
+}
+.search-box{
+    /* width: 10rem;
+    height: 2rem; */
+    padding: 0.2rem 0.6rem;
+    font-size: 1.8rem;
+}
+
+.search-btm{
+    font-size: 1.8rem;
+    padding: 0.2rem 0.6rem;
+    border-radius: 3px;
+    border: 1px solid green;
+    
+}
+.recent-activity{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+}
+
+.topic-link{
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+    /* justify-content: ; */
+    padding: 0px 4rem;
+
+}
+.topic-link a{
+    font-size: 1.6rem;
+    text-decoration: none;
+    color: white;
+    font-family: 'roboto';
+    font-weight: 200;
+    outline: 1px solid black;
+    padding: 0.4rem 1rem;
+    border-radius: 20px;
+    background: rgb(51, 51, 51);
+}
+
+.blog-post-message{
+    margin: 2rem 4rem;
+
+}
+.blog-post-message a{
+    text-decoration: none;
+    /* outline: 1px solid darkblue; */
+    /* background: red; */
+}
